--- a/fase3.ipynb
+++ b/fase3.ipynb
@@ -381,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "df_employees"
+    "df_employees a lista de tuplas"
    ]
   },
   {
@@ -390,8 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_de_tuplas = [tuple(x) for x in df_Employees.to_records(index=False)] \n",
-    "\n"
+    "lista_de_tuplas = [tuple(x) for x in df_Employees.to_records(index=False)] "
    ]
   },
   {
