cambiando una chorrada

--- a/jupyter_bueno.ipynb
+++ b/jupyter_bueno.ipynb
@@ -6232,11 +6232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('Employees', index=False)\n",
+    "df.to_csv('Employees.csv', index=False)\n",
     "df1.to_csv('JobDetails.csv', index=False)\n",
     "df2.to_csv('Compensation.csv', index=False)\n",
     "df3.to_csv('Satisfaction.csv', index = False)"
