Ajuste cifras conclusión final.

--- a/Fase_4_AB_Testing.ipynb
+++ b/Fase_4_AB_Testing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "      <td>15</td>\n",
        "      <td>15</td>\n",
        "      <td>1972</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52</th>\n",
@@ -196,7 +196,7 @@
        "      <td>11</td>\n",
        "      <td>9</td>\n",
        "      <td>1971</td>\n",
-       "      <td>1</td>\n",
+       "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42</th>\n",
@@ -230,7 +230,7 @@
        "      <td>11</td>\n",
        "      <td>15</td>\n",
        "      <td>1981</td>\n",
-       "      <td>1</td>\n",
+       "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>47</th>\n",
@@ -264,7 +264,7 @@
        "      <td>5</td>\n",
        "      <td>6</td>\n",
        "      <td>1976</td>\n",
-       "      <td>False</td>\n",
+       "      <td>no</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>48</th>\n",
@@ -298,7 +298,7 @@
        "      <td>4</td>\n",
        "      <td>7</td>\n",
        "      <td>1975</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>yes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -363,14 +363,14 @@
        "\n",
        "     YearsSinceLastPromotion  YearsWithCurrManager  DateBirth RemoteWork  \n",
        "Age                                                                       \n",
-       "51                        15                    15       1972        Yes  \n",
-       "52                        11                     9       1971          1  \n",
-       "42                        11                    15       1981          1  \n",
-       "47                         5                     6       1976      False  \n",
-       "48                         4                     7       1975        Yes  "
+       "51                        15                    15       1972        yes  \n",
+       "52                        11                     9       1971        yes  \n",
+       "42                        11                    15       1981        yes  \n",
+       "47                         5                     6       1976         no  \n",
+       "48                         4                     7       1975        yes  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "DateBirth                  1987.000000   1993.000000   2005.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -859,9 +859,9 @@
        "    <tr>\n",
        "      <th>RemoteWork</th>\n",
        "      <td>1080</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>242</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>666</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -879,10 +879,10 @@
        "OverTime           1080      3                 No  449\n",
        "PerformanceRating  1080      3                3,0  799\n",
        "TotalWorkingYears  1080     41            Unknown  360\n",
-       "RemoteWork         1080      5                  1  242"
+       "RemoteWork         1080      2                yes  666"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
        "B          332   83"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
        "B          80.00  20.00"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1401,8 +1401,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La **diferencia de medias** indica que, en promedio, la rotación en el grupo A es un 6.20% menor que en el grupo B. \n",
-    "Este 6.20% concide con la resta del porcentaje de 'yes' de la tabla de contingencia del grupo A (13.67%) y del grupo B (19.87)."
+    "La **diferencia de medias** indica que, en promedio, la rotación en el grupo A es un 5.86% menor que en el grupo B. \n",
+    "Este 5.86% concide con la resta del porcentaje de 'yes' de la tabla de contingencia del grupo A (13.67%) y del grupo B (19.87)."
    ]
   }
  ],
@@ -1422,7 +1422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
