--- a/borradores/creacion-BBDD.ipynb
+++ b/borradores/creacion-BBDD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "4        yes  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -385,13 +385,13 @@
        "(1080, 9)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_empleados = pd.read_csv('/Users/Tania_1/Desktop/ADALAB/MODULO_3/project-da-promo-angela-modulo-3-team-3/ETL/data/output_data/Employees.csv')\n",
+    "df_empleados = pd.read_csv('../ETL/data/output_data/Employees.csv')\n",
     "df_empleados.shape"
    ]
   },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "4           Medical      F       Unknown       1975  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "4           Medical      F       Unknown       1975  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
        "4              22                        4                     7  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,13 +805,13 @@
    "source": [
     "#Job details\n",
     "\n",
-    "df_job = pd.read_csv('/Users/Tania_1/Desktop/ADALAB/MODULO_3/project-da-promo-angela-modulo-3-team-3/ETL/data/output_data/JobDetails.csv')\n",
+    "df_job = pd.read_csv('../ETL/data/output_data/JobDetails.csv')\n",
     "df_job.head(5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -847,88 +847,88 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>998</td>\n",
+       "      <th>943</th>\n",
+       "      <td>943</td>\n",
        "      <td>3</td>\n",
-       "      <td>Sales Executive</td>\n",
-       "      <td>5</td>\n",
-       "      <td>18,0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15,0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>463</th>\n",
-       "      <td>463</td>\n",
+       "      <th>975</th>\n",
+       "      <td>975</td>\n",
        "      <td>2</td>\n",
-       "      <td>Sales Executive</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>72</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Manufacturing Director</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Laboratory Technician</td>\n",
+       "      <td>6</td>\n",
        "      <td>10,0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>200</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Sales Executive</td>\n",
+       "      <th>736</th>\n",
+       "      <td>736</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Healthcare Representative</td>\n",
        "      <td>4</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>636</th>\n",
-       "      <td>636</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Manufacturing Director</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5,0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>76</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Laboratory Technician</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12,0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>837</th>\n",
+       "      <td>837</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Research Scientist</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     index  JobLevel                   JobRole  NumCompaniesWorked  \\\n",
-       "998    998         3          Sales Executive                    5   \n",
-       "463    463         2          Sales Executive                    0   \n",
-       "72      72         3   Manufacturing Director                    1   \n",
-       "200    200         2          Sales Executive                    4   \n",
-       "636    636         2   Manufacturing Director                    0   \n",
+       "     index  JobLevel                      JobRole  NumCompaniesWorked  \\\n",
+       "943    943         3                     Manager                    3   \n",
+       "975    975         2       Laboratory Technician                    6   \n",
+       "736    736         3   Healthcare Representative                    4   \n",
+       "76      76         2       Laboratory Technician                    1   \n",
+       "837    837         1          Research Scientist                    8   \n",
        "\n",
        "    TotalWorkingYears  YearsAtCompany  YearsSinceLastPromotion  \\\n",
-       "998              18,0               1                        0   \n",
-       "463           Unknown               8                        7   \n",
-       "72               10,0              10                        8   \n",
-       "200           Unknown               7                        7   \n",
-       "636               5,0               4                        1   \n",
+       "943              15,0               0                        0   \n",
+       "975              10,0               1                        0   \n",
+       "736           Unknown               3                        1   \n",
+       "76               12,0              12                        6   \n",
+       "837           Unknown               5                        0   \n",
        "\n",
        "     YearsWithCurrManager  \n",
-       "998                     0  \n",
-       "463                     1  \n",
-       "72                      8  \n",
-       "200                     7  \n",
-       "636                     2  "
+       "943                     0  \n",
+       "975                     0  \n",
+       "736                     2  \n",
+       "76                     10  \n",
+       "837                     4  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
        "1079                     7  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
        "4                 11                 1                      3        yes  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,13 +1203,13 @@
    "source": [
     "#compensation\n",
     "\n",
-    "df_compensacion = pd.read_csv('/Users/Tania_1/Desktop/ADALAB/MODULO_3/project-da-promo-angela-modulo-3-team-3/ETL/data/output_data/Compensation.csv')\n",
+    "df_compensacion = pd.read_csv('../ETL/data/output_data/Compensation.csv')\n",
     "df_compensacion.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
        "4                 11                 1                      3        yes  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
        "1079                 16                 0                      2         no  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1585,7 @@
        "4                         2                3  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,13 +1593,13 @@
    "source": [
     "#satisfaccion\n",
     "\n",
-    "df_satisfaccion = pd.read_csv('/Users/Tania_1/Desktop/ADALAB/MODULO_3/project-da-promo-angela-modulo-3-team-3/ETL/data/output_data/Satisfaction.csv')\n",
+    "df_satisfaccion = pd.read_csv('../ETL/data/output_data/Satisfaction.csv')\n",
     "df_satisfaccion.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1703,7 @@
        "4               3,0                         2                3  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
